...
// MARK: - Models

enum SearchScope: String, CaseIterable {
    case all = "All"
    case tasks = "Tasks"
    case knowledge = "Knowledge"
    case journeys = "Journeys"
    case plans = "Plans"
    case memories = "Memories"
}

struct SearchFilters {
    var textQuery: String?
    var dateRange: DateRange?
...
